<resources>
    <string name="app_name">LatihanStorage</string>
    <string name="buat_file">Buat File</string>
    <string name="ubah_file">Ubah File</string>
    <string name="baca_file">Baca File</string>
    <string name="hapus_file">Hapus File</string>
    <string name="hasil_baca_file">Hasil Baca File</string>
    <string name="latihan_persistance">LATIHAN PERSISTANCE</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="eksternal_storage">Eksternal Storage</string>
</resources>