<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".InternalActivity">
    
    <Button
        android:id="@+id/buttonBuatFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buat_file"/>

    <Button
        android:id="@+id/buttonUbahFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ubah_file"/>

    <Button
        android:id="@+id/buttonBacaFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/baca_file"/>

    <Button
        android:id="@+id/buttonHapusFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hapus_file"/>

    <TextView
        android:id="@+id/textBaca"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:gravity="top|left"
        android:padding="5dp"
        android:textColorHint="#000"
        android:hint="@string/hasil_baca_file"
        android:inputType="textMultiLine"/>

</LinearLayout>