<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latihan_persistance"
        android:textSize="18sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/binternal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/internal_storage" />

    <Button
        android:id="@+id/beksternal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eksternal_storage"/>

</LinearLayout>